--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Better GitHub Profile!!!</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto|Lora' rel='stylesheet' type='text/css'>
   </head>
@@ -12,26 +13,30 @@
     </header>
     <main class="container">
       <section class="info-container" ng-controller="ProfileController as profctrl" ng-init="profctrl.getProfile()" ng-cloak>
-        <img class="animated pulse" src={{profctrl.profile.avatar_url}}/>
+        <div class="image-container">
+          <img class="animated pulse" id="profile-image" src={{profctrl.profile.avatar_url}}/>
+        </div>
         <section class="stars-followers-container">
-          <span>Starred Repos</span>
-          <p>45</p>
-          <span>Public Repos</span>
-          <p>{{profctrl.profile.public_repos}}</p>
-          <span>Followers</span>
-          <p>{{profctrl.profile.followers}}</p>
-          <span>Following</span>
-          <p>{{profctrl.profile.following}}</p>
+          <aside class="public-details">
+            <span>Starred Repos</span>
+            <p>45</p>
+            <span>Public Repos</span>
+            <p>{{profctrl.profile.public_repos}}</p>
+            <span>Followers</span>
+            <p>{{profctrl.profile.followers}}</p>
+            <span>Following</span>
+            <p>{{profctrl.profile.following}}</p>
+          </aside>
         </section>
       </section>
       <section class="repos-container" ng-controller="RepoController as repoctrl" ng-init="repoctrl.getRepos()" ng-cloak>
-        <section class="repo-instance" ng-repeat="repo in repoctrl.repos" ng-cloak>
-          <li class="info-line"><span>Name:</span>{{repoctrl.repos.name}}</li><br>
-          <li class="info-line"><span>URL:</span><a href="{{repoctrl.repos.html_url}}">{{repoctrl.repos.html_url}}</a></li><br>
-          <li class="info-line"><span>Name:</span>{{repoctrl.repos.name}}</li><br>
-          <li class="info-line"><span>Description:</span>{{repoctrl.repos.description}}</li><br>
-          <li class="info-line"><span>Created at:</span>{{repoctrl.repos.created_at}}</li><br>
-          <li class="info-line"><span>Forks Count:</span>{{repoctrl.repos.forks_count}}</li><br>
+        <section class="animated fadeIn" id="repo-instance" ng-repeat="repo in repoctrl.repos" ng-cloak>
+          <li class="info-line"><span>Name:</span>{{repo.name}}</li><br>
+          <li class="info-line"><span>URL:</span><a href="{{repoctrl.repos.html_url}}">{{repo.html_url}}</a></li><br>
+          <li class="info-line"><span>Name:</span>{{repo.name}}</li><br>
+          <li class="info-line"><span>Description:</span>{{repo.description}}</li><br>
+          <li class="info-line"><span>Created at:</span>{{repo.created_at}}</li><br>
+          <li class="info-line"><span>Forks Count:</span>{{repo.forks_count}}</li><br>
 
         </section>
 
